--- a/Desktop/personalSite/personal-site/package.json
+++ b/Desktop/personalSite/personal-site/package.json
@@ -15,9 +15,10 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "react-wordcloud": "^1.2.7",
+    "react-tsparticles": "^2.12.2",
     "rive-react": "^0.0.29",
     "styled-components": "^5.3.3",
+    "tsparticles": "^2.12.0",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
